update middleware and add prometheus
